fix the infinite carousel on mobile size

--- a/app/components/latest-project/LatestProject.module.css
+++ b/app/components/latest-project/LatestProject.module.css
@@ -30,7 +30,7 @@
     transform: translateX(0);
   }
   100% {
-    transform: translateX(calc(-150px * 3));
+    transform: translateX(calc(-500px * 3));
   }
 }
 
@@ -39,8 +39,8 @@
   height: 250px;
   display: flex;
   align-items: center;
-  margin: auto 5px;
-  animation: scroll 25s linear infinite;
+  margin: auto 10px;
+  animation: scroll 10s linear infinite;
   scroll-behavior: smooth;
 }
 
@@ -99,7 +99,7 @@
 
 @media (max-width: 431px) {
   .project_heading{
-    font-size: 2.5rem;
+    font-size: 3rem;
     top: 30%;
   }
 
@@ -111,12 +111,24 @@
   .carousel{
     width: 150px;
     height: 200px;
+    margin: auto 5px;
+    animation: scroll 10s linear infinite;
+  }
+
+  @keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(calc(-150px * 3));
+    }
   }
 
   .card{
     max-width: 150px;
     height: 200px;
     border-width: .2rem;
+    border-radius: 15px;
   }
 
   .project_desc h6 {
